[package]
name = "extract_unaligned"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
rust-htslib = "0.40.2"
bio = "1.1.0"
num_cpus = "1.15.0"
bwa = { git = "https://github.com/kgori/rust-bwa.git", branch = "more_options" }