[package]
name = "window_counter"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
rust-htslib = "0.40.2"
anyhow = "1.0"
clap = { version = "4.1.1", features = ["derive"] }
itertools = "0.10.3"
